--- a/Css/Sass/main.sass
+++ b/Css/Sass/main.sass
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700')
 @import 'cards'
-@import 'tooltips'
+@import 'colors'
 @import 'inputs'
 @import 'chips'
 @import 'modals'
