--- a/Css/main.css
+++ b/Css/main.css
@@ -14,6 +14,7 @@ input {
   font-size: 16px;
   font-family: "Nunito", open-sans;
   border-radius: 2px;
+  margin: 0;
   border: 1px solid #BDBDBD;
   padding: 2px 8px 2px 8px;
   outline: none;
@@ -113,20 +114,62 @@ div.cr.input.basic {
     transform: rotate(45deg); }
 
 div.cr.input.label {
-  position: relative;
-  height: 32px;
-  vertical-align: middle;
-  padding: 16px 0 8px 0;
-  width: 100%; }
+  margin: 4px 2px 10px 2px; }
+  div.cr.input.label input {
+    left: -4px;
+    width: 80%; }
   div.cr.input.label div.label {
-    width: 100px;
-    padding: 2px 2px 2px 2px;
-    text-align: center;
-    height: 32px;
-    display: inline-block;
+    max-width: 200px;
+    white-space: nowrap;
+    padding-top: 9.5px;
+    padding-left: 20px;
+    padding-right: 18px;
     background: #ebebeb;
-    color: #000;
-    border-radius: 2px; }
+    color: #4d4d4d;
+    height: 31px;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    border: 0.5px solid #d1d1d1;
+    border-right: 0px;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    font-weight: bold; }
+  div.cr.input.label div.label.blue {
+    background: #2196F3;
+    color: #fff;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    border: 0.5px solid #2196F3;
+    border-right: 0px; }
+  div.cr.input.label div.label.green {
+    background: #00C853;
+    color: #fff;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    border: 0.5px solid #00C853;
+    border-right: 0px; }
+  div.cr.input.label div.label.teal {
+    background: #009688;
+    color: #fff;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    border: 0.5px solid #009688;
+    border-right: 0px; }
+  div.cr.input.label div.label.pink {
+    background: #E91E63;
+    color: #fff;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    border: 0.5px solid #E91E63;
+    border-right: 0px; }
+  div.cr.input.label div.label.red {
+    background: #F44336;
+    color: #fff;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    border: 0.5px solid #F44336;
+    border-right: 0px; }
 
 /*-----------------------------------MATERIAL INPUT ------------------------- */
 .cr-material-field {
