Corregido parcialmente el width de los inputs

--- a/Css/Sass/inputs.sass
+++ b/Css/Sass/inputs.sass
@@ -16,7 +16,7 @@ input
     font-size: 16px
     font-family: 'Nunito', open-sans
     border-radius: 2px
-    margin: 0 
+    margin: 0
     border: 1px solid $input-border
     padding: 2px 8px 2px 8px
     outline: none
@@ -125,11 +125,12 @@ div.cr.input.basic
 
 div.cr.input.label
     margin: 4px 2px 10px 2px
+    width: 100%
     input
         left: -4px
         width: 80%
     div.label
-        max-width: 200px
+        width: 10%
         white-space: nowrap
         padding-top: 9.5px
         padding-left: 20px
