--- a/Css/main.css
+++ b/Css/main.css
@@ -114,12 +114,13 @@ div.cr.input.basic {
     transform: rotate(45deg); }
 
 div.cr.input.label {
-  margin: 4px 2px 10px 2px; }
+  margin: 4px 2px 10px 2px;
+  width: 100%; }
   div.cr.input.label input {
     left: -4px;
     width: 80%; }
   div.cr.input.label div.label {
-    max-width: 200px;
+    width: 10%;
     white-space: nowrap;
     padding-top: 9.5px;
     padding-left: 20px;
