Implementado cards, falta mejorar los input labels

--- a/Css/Sass/inputs.sass
+++ b/Css/Sass/inputs.sass
@@ -125,12 +125,10 @@ div.cr.input.basic
 
 div.cr.input.label
     margin: 4px 2px 10px 2px
-    width: 100%
+    position: relative 
     input
         left: -4px
-        width: 80%
     div.label
-        width: 10%
         white-space: nowrap
         padding-top: 9.5px
         padding-left: 20px
