Plugin jquery creado para desplegar el snackbar sin css, esto genera mas eficiencia en el codigo para no tener que usar clases alternas como show y hide para esconder el modal

--- a/Css/Sass/main.sass
+++ b/Css/Sass/main.sass
@@ -4,6 +4,7 @@
 @import 'inputs'
 @import 'chips'
 @import 'modals'
+@import 'snackbar'
 @import 'menubar'
 @import 'transitions'
 @import 'dropdowns'
