--- a/Css/Sass/snackbar.sass
+++ b/Css/Sass/snackbar.sass
@@ -13,3 +13,38 @@ div.cr.snackbar
 	z-index: 1
 	left: 50%
 	bottom: 30px
+
+
+@-webkit-keyframes fadein
+	from
+		bottom: 0
+		opacity: 0
+	to
+		bottom: 30px
+		opacity: 1
+
+@keyframes fadein
+	from
+		bottom: 0
+		opacity: 0
+	to
+		bottom: 30px
+		opacity: 1
+
+@-webkit-keyframes fadeout
+	from
+		bottom: 0
+		opacity: 1
+	to
+		bottom: 30px
+		opacity: 0
+
+@keyframes fadeout
+	from
+		bottom: 0
+		opacity: 1
+	to
+		bottom: 30px
+		opacity: 0
+
+
