--- a/Css/Sass/snackbar.sass
+++ b/Css/Sass/snackbar.sass
@@ -4,7 +4,7 @@ div.cr.snackbar
 	visibility: hidden
 	min-width: 250px
 	margin-left: -125px
-	background-color: $black
+	background-color: lighten($black, 30)
 	color: $white
 	text-align: center
 	border-radius: 2px
