Cambiado las medidas de el button ender  a rem para poder ser una medida mejor

--- a/Css/Sass/inputs.sass
+++ b/Css/Sass/inputs.sass
@@ -206,23 +206,23 @@ div.cr.input.label
         font-weight: bold
 
     button.ender
-        padding-top: 14.5px
-        padding-left: 15px
+        padding-top: 0.3rem
+        position: relative
+        padding-left: 1.5rem
         outline: none
-        padding-right: 15px
-        padding-bottom: 26px
+        padding-right: 1.5rem
+        padding-bottom: 0.2rem
         font-size: 12px
         left: -8px
         background: lighten($gray, 30)
         color: lighten($black, 30)
-        height: 38px
+        height: 2.62rem
         margin: 0
         border-top-right-radius: 2px
         border-bottom-right-radius: 2px
         border: 0.5px solid lighten($gray, 20)
         border-left: 0px
-        position: relative
-        display: inline-block
+        display: inline
         text-align: center
         font-weight: bold
         transition: background-color 0.3s
