--- a/Css/main.css
+++ b/Css/main.css
@@ -215,23 +215,23 @@ div.cr.input.label {
     text-align: center;
     font-weight: bold; }
   div.cr.input.label button.ender {
-    padding-top: 14.5px;
-    padding-left: 15px;
+    padding-top: 0.3rem;
+    position: relative;
+    padding-left: 1.5rem;
     outline: none;
-    padding-right: 15px;
-    padding-bottom: 26px;
+    padding-right: 1.5rem;
+    padding-bottom: 0.2rem;
     font-size: 12px;
     left: -8px;
     background: #ebebeb;
     color: #4d4d4d;
-    height: 38px;
+    height: 2.62rem;
     margin: 0;
     border-top-right-radius: 2px;
     border-bottom-right-radius: 2px;
     border: 0.5px solid #d1d1d1;
     border-left: 0px;
-    position: relative;
-    display: inline-block;
+    display: inline;
     text-align: center;
     font-weight: bold;
     transition: background-color 0.3s; }
