El snackbar afortunadamente ya funciona correctamente, falta pulir algunos detalles como permitir la posicion del snack ya sea a la izquierda como a la derecha. Tambien sería bastante útil agregar acciones predeterminadas a un snack como el UNDO que aun no funciona en lo absoluto

--- a/Css/Sass/variables.sass
+++ b/Css/Sass/variables.sass
@@ -17,6 +17,10 @@ $light-blue: #03A9F4
 $red: #F44336
 $red-1: #B71C1C
 $green: #00C853
+
+$intense-green: #1DE9B6
+$intense-purple: #9C27B0
+
 $orange: #FF9800
 $amber: #FFC107
 $light-green: #8BC34A
