--- a/Css/Sass/snackbar.sass
+++ b/Css/Sass/snackbar.sass
@@ -1,18 +1,79 @@
 @import 'variables'
 
 div.cr.snackbar
+
 	visibility: hidden
-	min-width: 250px
-	margin-left: -125px
-	background-color: lighten($black, 30)
+	// transition-duration: 0.5s
+	position: absolute 
+	font-size: 14px
+	font-family: 'Nunito', open-sans
+	background-color: lighten($black, 25)
 	color: $white
-	text-align: center
-	border-radius: 2px
-	padding: 16px
-	position: fixed
+	height: 20px
 	z-index: 1
+
+
+	justify-content: space-around
+	border-radius: 2px
+	display: flex
+	position: fixed
+
+	
+	box-shadow: 0 2px 1px -1px $gray
+	
+	bottom: 4%
+	margin-left: -80px
+	min-width: 250px
+	padding: 16px 
+	margin: 0 auto
 	left: 50%
-	bottom: 30px
+	margin-right: -50%
+	transform: translate(-50%, -50%)
+
+	button.snack.action
+		color: $yellow 
+		font-weight: bold
+		font-size: 12px
+		outline: none
+		border: none 
+		background: none
+		padding-left: 10px
+		transition: background-color 0.3s
+		&:active
+			background-color: lighten($black, 22)
+
+
+
+div.cr.snackbar.white 
+	background-color: darken($white, 1)
+	color: lighten($black, 30)
+	button.snack.action 
+		color: lighten($black, 30)
+		&:active
+			background-color: darken($white, 5)
+
+
+div.cr.snackbar.i-green 
+	background-color: $intense-green
+	color: $intense-purple
+	font-weight: bold 
+	button.snack.action
+		color: $intense-purple
+		&:active
+			background-color: darken($intense-green, 5)
+
+div.cr.snackbar.yellow
+	background-color: $yellow
+	color: lighten($black, 25)
+	button.snack.action 
+		color: lighten($black, 25)
+		&:active
+			background-color: darken($yellow, 5) 
+
+
+
+
+
 
 
 @-webkit-keyframes fadein
