Snackbar terminado con diseo responsive para poder se mostrada correctamente en telefonos tablets y computadores como debe ser, hay que proseguir con las cards para que tengan la misma propiedad. Asi mismo, proceder con los dialog. Finalmente hacer los procesos mas complejos como lo son las menubar,dropdown y las tables. Al finalizar el proceso se debe continuar con el layout responsive o en su defecto trabajar con el de bootstrap por el momento.

--- a/Css/Sass/layout.sass
+++ b/Css/Sass/layout.sass
@@ -1,5 +1,8 @@
 @import 'variables'
 
+
+html 
+	height: 100vh
 .col-1
 	width: 8.33%
 .col-2
@@ -43,20 +46,20 @@ div.cr-inline
 	padding-right: 15px
 	padding-left: 15px
 
-	@media screen and(max-width: 767px)
+	@media screen and (max-width: 767px)
 		width: auto
 		max-width: 90%
 
-	@media screen and(min-width: 768px)
+	@media screen and (min-width: 768px)
 		width: 750px
 		max-width: 90%
 
-	@media screen and(max-width: 1199px) and (min-width: 992px)
+	@media screen and (max-width: 1199px) and (min-width: 992px)
 		width: 970px
 		margin-left: 25px
 		max-width: 90%
 
-	@media screen and(min-width: 1200px)
+	@media screen and (min-width: 1200px)
 		width: 1170px
 		margin-left: 35px
 		max-width: 90%
